test to fix parallax background issue on mobile - homepage only

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -6254,14 +6254,46 @@ a {
         #mainNav .nav-link.active:hover {
           color: white; } }
 
+/* body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(photos/2452.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
+/* @media(max-width: 991.98px){
+	width: 100%;
+	height: 100%;
+	background: url('/chess-landing-mobile.jpeg') center no-repeat;
+	background-attachment: scroll;
+	background-size: auto;
+} */
 .about-page {
   width: 100%;
   height: 100%;
   background: url("https://images.unsplash.com/photo-1503332132010-d1b77a049ddd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=49016a52e96d5176453fda05957035c9&auto=format&fit=crop&w=1950&q=80");
+  /* background: url("/skate.gif"); */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: 100% cover  !important;
+  -moz-background-size: 100% cover  !important;
+  -o-background-size: 100% cover  !important;
+  -webkit-background-attachement: fixed !important;
+  -moz-background-attachment: fixed !important;
+  -o-background-attachment: fixed !important;
+  -webkit-background-position: center !important;
+  -moz-background-position: center !important;
+  -o-background-position: center !important;
   position: relative;
   display: table;
   min-height: 1024px; }
@@ -6282,13 +6314,13 @@ a {
     opacity: .6; }
   .about-page #landing-page {
     text-align: center;
-    margin-top: 0rem;
-    margin-bottom: 1rem;
+    margin-top: 6rem;
+    margin-bottom: 9rem;
     padding-left: 2rem;
     padding-right: 2rem; }
     @media (min-width: 576px) {
       .about-page #landing-page {
-        margin-top: 6rem; } }
+        margin-top: 0rem; } }
     @media (min-width: 768px) {
       .about-page #landing-page {
         margin-top: 0rem; } }
